<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.shockleyje.vemoos.WelcomeActivity">

    <!--TODO: switch icon with proper asset-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="12"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_launcher"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/activity_welcome_text"
        android:textStyle="italic"
        android:textSize="12pt"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/activity_welcome_offer_ride_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_welcome_offer_ride_text"
        android:textSize="8pt"
        android:textColor="@color/colorWhite"
        android:onClick="offerRide"
        />

    <Button
        android:id="@+id/activity_welcome_find_ride_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:text="@string/activity_welcome_find_ride_text"
        android:textSize="8pt"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:onClick="findRide"
        />
</LinearLayout>
