<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/activity_find_ride"
    tools:context="com.shockleyje.vemoos.FindRideActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"

        />


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        >
        <LinearLayout
            android:id="@+id/activity_find_ride_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/activity_find_ride_text_box_leaving_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:clickable="true"
                android:textColorHint="@color/colorGrey"
                android:hint="@string/activity_find_ride_leaving_from"/>
            <EditText
                android:id="@+id/activity_find_ride_text_box_going_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:clickable="true"
                android:textColorHint="@color/colorGrey"
                android:hint="@string/activity_find_ride_going_to"/>
       </LinearLayout>

        <Button
            android:id="@+id/activity_find_ride_find_ride_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_find_ride_text_box"
            android:text="@string/activity_find_ride_find_ride_button"
            android:background="@color/colorAccent"
            android:onClick="searchRides"/>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
